--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "int(\"+17285553334\") # 7285553335"
+    "int(\"7285553334\")  # 7285553335"
    ]
   },
   {
